# ComfyUI-HSyn9DHPE

./: .gitignore  README.md  inference_core.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
houdini/: houdini_render.hiplc
houdini/backup/: houdini_render_bak1.hiplc  houdini_render_bak10.hiplc  houdini_render_bak11.hiplc  houdini_render_bak12.hiplc  houdini_render_bak13.hiplc  houdini_render_bak14.hiplc  houdini_render_bak15.hiplc  houdini_render_bak16.hiplc  houdini_render_bak17.hiplc  houdini_render_bak18.hiplc  houdini_render_bak19.hiplc  houdini_render_bak2.hiplc  houdini_render_bak20.hiplc  houdini_render_bak21.hiplc  houdini_render_bak22.hiplc  houdini_render_bak23.hiplc  houdini_render_bak24.hiplc  houdini_render_bak25.hiplc  houdini_render_bak26.hiplc  houdini_render_bak27.hiplc  houdini_render_bak28.hiplc  houdini_render_bak29.hiplc  houdini_render_bak3.hiplc  houdini_render_bak30.hiplc  houdini_render_bak31.hiplc  houdini_render_bak32.hiplc  houdini_render_bak33.hiplc  houdini_render_bak34.hiplc  houdini_render_bak35.hiplc  houdini_render_bak36.hiplc  houdini_render_bak37.hiplc  houdini_render_bak38.hiplc  houdini_render_bak39.hiplc  houdini_render_bak4.hiplc  houdini_render_bak40.hiplc  houdini_render_bak41.hiplc  houdini_render_bak42.hiplc  houdini_render_bak43.hiplc  houdini_render_bak44.hiplc  houdini_render_bak45.hiplc  (+11 more)
